# hydroponics-pico

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
